# rules_rs

rs/: extensions.bzl  rules_rust.bzl  rust_crate.bzl
rs/private/: BUILD.bazel  annotations.bzl  bpf_linker_repository.bzl  bpf_linker_repository_test.bzl  clippy_repository.bzl  repository_utils.bzl  rustc_repository.bzl  rustc_src_repository.bzl  rustfmt_repository.bzl
rs/toolchains/: BUILD.bazel  declare_rustc_toolchains.bzl  module_extension.bzl
test/: MODULE.bazel
test/wasm_bindgen/: BUILD.bazel
tools/rust_analyzer/: BUILD.bazel
