load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_clippy", "rust_library", "rust_test")
load("@rules_rust//tools/private:tool_utils.bzl", "aspect_repository")

package(default_visibility = ["//visibility:public"])

rust_binary(
    name = "discover_bazel_rust_project",
    srcs = ["@rules_rust//tools/rust_analyzer:bin/discover_rust_project.rs"],
    edition = "2018",
    rustc_env = {
        "ASPECT_REPOSITORY": aspect_repository(),
    },
    deps = [
        ":gen_rust_project_lib",
        "@rrra//:anyhow",
        "@rrra//:camino",
        "@rrra//:clap",
        "@rrra//:env_logger",
        "@rrra//:log",
        "@rrra//:serde_json",
    ],
)

rust_binary(
    name = "gen_rust_project",
    srcs = ["@rules_rust//tools/rust_analyzer:bin/gen_rust_project.rs"],
    edition = "2018",
    rustc_env = {
        "ASPECT_REPOSITORY": aspect_repository(),
    },
    deps = [
        ":gen_rust_project_lib",
        "@rrra//:anyhow",
        "@rrra//:camino",
        "@rrra//:clap",
        "@rrra//:env_logger",
        "@rrra//:log",
        "@rrra//:serde_json",
    ],
)

rust_binary(
    name = "validate",
    srcs = ["@rules_rust//tools/rust_analyzer:bin/validate.rs"],
    data = [
        "@rules_rust//rust/toolchain:current_rust_analyzer_toolchain",
    ],
    edition = "2021",
    rustc_env = {
        "CARGO_PKG_AUTHORS": "",
        "CARGO_PKG_VERSION": "0.0.0",
        "RUST_ANALYZER_RLOCATIONPATH": "$(RUST_ANALYZER_RLOCATIONPATH)",
    },
    toolchains = ["@rules_rust//rust/toolchain:current_rust_analyzer_toolchain"],
    deps = [
        "@rrra//:clap",
        "@rrra//:env_logger",
        "@rrra//:log",
        "@rules_rust//rust/runfiles",
    ],
)

rust_library(
    name = "gen_rust_project_lib",
    srcs = [
        "@rules_rust//tools/rust_analyzer:aquery.rs",
        "@rules_rust//tools/rust_analyzer:lib.rs",
        "@rules_rust//tools/rust_analyzer:rust_project.rs",
    ],
    data = [
        "@rules_rust//rust/private:rust_analyzer_detect_sysroot",
    ],
    edition = "2018",
    deps = [
        "@rrra//:anyhow",
        "@rrra//:camino",
        "@rrra//:clap",
        "@rrra//:log",
        "@rrra//:serde",
        "@rrra//:serde_json",
        "@rules_rust//rust/runfiles",
    ],
)

rust_test(
    name = "gen_rust_project_lib_test",
    crate = ":gen_rust_project_lib",
    deps = [
        "@rrra//:itertools",
    ],
)

rust_clippy(
    name = "gen_rust_project_clippy",
    testonly = True,
    deps = [
        ":gen_rust_project",
    ],
)

bzl_library(
    name = "bzl_lib",
    deps = [
        "@bazel_features//:features",
        "@rules_rust//rust:bzl_lib",
    ],
)
